# minic

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Collector.cc  Collector.h  Renamer.cc  Renamer.h  common.h  main.cc  postProcess.cc  postProcess.h
